# sql-importer

./: .editorconfig  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
sql_importer/: __init__.py  sql_loader.py  sql_module.py
tests/postgresql/: conftest.py  test_import.py
tests/postgresql/sqls/: __init__.py  create_table.sql  insert_sale.sql  select_sales.sql
