[tool.poetry]
name = "sql-importer"
version = "2.0.0"
description = "Utility to import sql files as a python module."
authors = ["BeProud"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
