[tool.poetry]
name = "sql-importer"
version = "2.0.0"
description = "Utility to import sql files as a python module."
authors = ["BeProud"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
psycopg2 = { version = "^2.8.4", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-isort = "^2.9.0"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-randomly = "^3.2.1"

[tool.poetry.extras]
postgresql = ["psycopg2"]

[tool.black]
line-length = 99
exclude = '/(\.venv|\.pytest_cache|\.mypy_cache)/'

[tool.isort]
line_length = 99
skip = '.venv,.pytest_cache,.mypy_cache'
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
